<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_test_results_24"
        android:title="@string/home"
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_chart"
        android:icon="@drawable/ic_chart_24"
        android:title="@string/chart"
        android:checkable="true"/>

    <item
        android:id="@+id/fab"
        android:enabled="false"
        android:title=""
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_report"
        android:icon="@drawable/ic_newspaper_24"
        android:title="@string/report"
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_user"
        android:icon="@drawable/ic_person_24"
        android:title="@string/me"
        android:checkable="true"/>
</menu>