<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/backgroundStyle"
    tools:context=".view.component.CustomListPhotoFragment">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:padding="10dp"
            android:src="@drawable/ic_tick_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/photo"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/removeAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/calendar"
            android:padding="10dp"
            android:src="@drawable/ic_close_30" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCustomListPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        tools:ignore="RedundantNamespace" />

</RelativeLayout>