<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/backgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.category.SettingCategoryActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/titleBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="UselessParent">


                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_left_30" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/setting_category"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/titleSubAAE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBackground"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/tabExpenseSetting"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Expense" />

            <TextView
                android:id="@+id/tabIncomeSetting"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Income2" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerSetting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>