<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/backgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.category.SettingCategoryActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/titleBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:text="@string/delete"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_category"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/addNewCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/calendar"
                    android:padding="10dp"
                    android:src="@drawable/ic_tick_30" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/titleSubAAE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBackground"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/tabExpenseSetting"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Expense" />

            <View
                style="@style/background"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tabIncomeSetting"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Income2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleSubAAE"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/selected_background">

                <ImageView
                    android:id="@+id/imageIconSelected"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_camera_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.466"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.466" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/nameCategoryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="10dp"
                android:hint="@string/title_edit_text_category"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewIconAddCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        tools:ignore="RedundantNamespace" />

</RelativeLayout>